@@ -3,6 +3,17 @@ NEWS since Mercury release 0.9:
 
 Changes to the Mercury language:
 
+* We've added support for explicit type quantification.
+
+  An expression of the form "Term `with_type` Type",
+  e.g. "X `with_type` list(int)", can be used in place of
+  the specified Term to constrain the type of that term.
+  This is sometimes useful for resolving type ambiguities,
+  which can occur as a result of overloading or polymorphism.
+
+  See the "Explicit type quantification" and "Variable scoping"
+  sections of the language reference manual for details.
+
 * We've added support for record syntax, so that fields of
   constructors can be conveniently extracted and updated
   without writing lots of trivial access predicates.
